@@ -109,6 +109,8 @@ New in this Isabelle release
     the reference "print_record_type_abbr".
   - Simproc "record_upd_simproc" for simplification of multiple updates added 
     (not enabled by default).
+  - Simproc "record_ex_sel_eq_simproc" to simplify EX x. sel r = x resp.
+    EX x. x = sel r to True (not enabled by default).
   - Tactic "record_split_simp_tac" to split and simplify records added.
  
 * 'specification' command added, allowing for definition by
